--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="main">
     <H1 class="libertinus-keyboard-regular">Money</H1>
    <label for="A10">10</label>
-    <input type="type" id="A10" placeholder="10" value="">
+    <input type="type" id="A10" placeholder="10" value="0">
 <br>
     <label for="A20">20</label>
     <input type="type" id="A20" placeholder="20" value="0">
@@ -38,6 +38,7 @@
     <button onclick="count()">Count</button>
 
     <div class="total" id="tall">0</div>
+    <div class="total" id="tall_1">0</div>
 
     </div>
 
@@ -55,6 +56,7 @@
             document.getElementById("tall").innerHTML = total; 
         }
 
+        for{}
     </script>
 </body>
 </html>
